<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit_note"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/icon_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close"
            android:layout_marginStart="14dp"/>

        <TextView
            android:id="@+id/textViewSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="description"
                android:background="@drawable/shape_rounded_corners"
                android:gravity="top"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                android:minLines="4"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="start"
                app:layout_constraintStart_toStartOf="@+id/textViewPriority"
                app:layout_constraintTop_toBottomOf="@+id/textViewPriority" />

            <TextView
                android:id="@+id/textViewPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/priority"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/editTextDescription"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/separator_support"
                app:layout_constraintTop_toBottomOf="@+id/spinner_priority" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/do_before"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/spinner_priority"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:theme="@style/SwitchStyle"
                app:layout_constraintEnd_toEndOf="@+id/editTextDescription"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/textViewChosenDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="35dp"
                android:background="@color/separator_support"
                app:layout_constraintTop_toBottomOf="@+id/textViewChosenDate" />

            <TextView
                android:id="@+id/textViewDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="14dp"
                android:text="@string/delete"
                android:textColor="@color/red"
                android:textSize="17sp"
                app:drawableStartCompat="@drawable/ic_delete_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>